Fix the wrapping issue

--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 350px;
     height: 300px;
     animation: 1s ease-out 0s 1 slideInFromRight;
 }
@@ -135,14 +135,18 @@ footer {
     align-items: center;
     justify-content: center;
     animation: 1s ease-out 0s 1 slideInFromLeft;
+    flex-wrap: wrap;
 }
 
 #projects {
     display: flex;
+    justify-content: center;
+    align-items: center;
     background-image: url("asset\\it_computer_programming.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    flex-wrap: wrap;
 }
 
 #about_me__sec {
@@ -161,7 +165,7 @@ footer {
 
 #my_name {
     color: white;
-    font-size: 30px;
+    font-size: 25px;
 }
 
 #career {
